src/styles.less
@font-face {
    font-family: 'Hillstown Sans aged';
    src: url('./Hillstown Sans aged.ttf') format('truetype');
}

@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');

:root {
    padding: 0;
    margin: 0;
    --primary-text: #DCD7C9;
    --secondary-text: #A27B5C;
    --primary-bg-color: #332519;
    --secondary-bg-color: #826F66;
    --transparent-color: rgba(17, 17, 17, 0.900);
    color: var(--primary-text);
    box-sizing: border-box;
}

div, nav, header, body {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--primary-bg-color);
}

h2 {
    font-size: clamp(48px, 4rem, 8vw);
    margin: 0;
    padding: 0;
}

p {
    font-size: clamp(22px, 1.8rem, 2vw);
    // font-size: 2vw;
    line-height: 45px;
    font-family: 'Clash Display', sans-serif;
    margin: 4px;
    width: min(75%, 80vw);
}

a {
    font-size: 1.3rem;
    text-decoration: none;
    color: var(--primary-text);
    padding: 10px;

    &:hover {
        color: white;
    }
}

h1 {
    font-size: 8rem;
}

h1, h2, h3 {
    font-family: 'Telma', cursive;
    font-weight: 200;
    padding-inline: 10px;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(17, 17, 17, 0.900);
    gap: max(4px, 7.5vw);
    height: min(75px, 50vh);
    width: 100%;
    position: fixed;
    top: 0;

    a {
        font-size: 1.8rem;
    }
 
}

#content {

    .content__intro {
        background: url(./images/coffee1.jpg);
        background-position-y: -1350px;
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-size: 2400px;    
        height: 100vh;
        display: flex;
        justify-content: center;
        align-items: center;

        #hero-text {
            color: var(--primary-text);
            text-align: center;
            font-size: clamp(48px, 7.4rem, 10vw);
            font-family: 'Telma', cursive;
        }
    }
    
}

.content__welcome {
    margin-inline: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-block: 2rem;

    h2 {
        margin: 0;
    }
}


.content__whyUs {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) , url('./images/coffee-machine.jpg');
    background-size:cover;
    background-attachment: fixed;
    margin-inline: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;

    h2 {
        margin: 0;
        padding: 0;
    }
}

// footer {
//     display: flex;
//     justify-content: space-around;
//     background-color: var(--primary-bg-color);
//     height: min(30px, 10vh);
//     align-items: center;
//     justify-content: center;
//     font-size: 1.3rem;
//     position: fixed;
//     width: 100%;
//     bottom: 0;
    
//     a {
//         padding: 0;
//         text-decoration: none;
//         color: var(--primary-text);
//     }
// }

.content__menu {
    justify-content: center;
    display: grid;
    grid-template-columns: repeat(2, 40%);
    background: linear-gradient(rgba(0, 0, 0, 0.379),rgba(0,0,0,0.379)), url('./images/coffee2.jpg');
    background-size: cover;
    background-attachment: fixed;
    padding-block: 120px;
    min-height: 100vh;

    h2 {
        margin: 1rem;
        grid-column: span 2;
        text-align: center;
    }

    h3 {
        font-size: clamp(48px, 5rem, 8vw);
        text-align: center;
        margin-block: 40px;
    }

    #tea-title {
        grid-row: 2;
        grid-column: 2;
    }

    #tea-list {
        grid-column: 2;
    }

    #coffee-title {
        grid-column: 1;
    }

    #coffee-list {
        grid-column: 1;
    }

    ul {        
        padding: 0;
        text-align: center;
        margin: 0;
        font-size: clamp(20px, 1.8rem, 2.3vw);
        // font-size: 2.3vw;
    font-family: 'Clash Display', sans-serif;

    }

    li {
        list-style-type: none;
        margin-block: 1.4rem;
    }
    
}

.about__us {
    display: flex;  
    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('./images/coffee-house.jpg');
    background-position-y: -200px;
    background-attachment: fixed;
    background-size: auto;
    margin-bottom: 0;
    min-height: 100vh;
    place-content: center;

    h2 {
        margin-top: 10vh;
    }
}

